--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Up Game | Walz Store</title>
+    <title>Top Up Game | Walz Shop</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,8 +13,7 @@
         <div class="container navbar-container">
             <a href="index.html" class="brand-logo">
                 <span class="logo-text">WALZ</span>
-                <span class="logo-accent">STORE</span>
-                <p class="tagline">Top Up Game Murah</p>
+                <span class="logo-accent">SHOP</span>
             </a>
             <a href="index.html" class="btn-back">
                 <i class="fas fa-arrow-left"></i> Kembali
@@ -97,15 +96,15 @@
         <div class="container footer-content">
             <div class="footer-logo">
                 <span class="logo-text">WALZ</span>
-                <span class="logo-accent">STORE</span>
+                <span class="logo-accent">SHOP</span>
             </div>
             <p class="footer-desc">
-                Walz Store adalah platform top up game terpercaya. Kami menyediakan layanan top up termurah dengan proses yang cepat dan aman. Dukungan pelanggan 24/7.
+                Walz Shop adalah platform top up game terpercaya. Kami menyediakan layanan top up termurah dengan proses yang cepat dan aman. Dukungan pelanggan 24/7.
             </p>
             <div class="footer-social">
                 <a href="https://wa.me/6282298902274" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp fa-lg"></i></a>
             </div>
-            <p class="footer-copyright">&copy; 2024 Walz Store. All rights reserved.</p>
+            <p class="footer-copyright">&copy; 2024 Walz Shop. All rights reserved.</p>
         </div>
     </footer>
 
