--- a/game.html
+++ b/game.html
@@ -3,58 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Murah & Cepat</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <title>Top Up Game</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body data-page="index">
+<body data-page="game">
 
-    <header class="navbar">
-        <div class="container navbar-container">
-            <a href="index.html" class="brand-logo">
-                <span class="logo-text">WALZ</span>
-                <span class="logo-accent">SHOP</span>
-            </a>
-            <a href="#" class="btn-back" style="display: none;">
-                <i class="fas fa-arrow-left"></i> Kembali
-            </a>
-        </div>
+    <div id="modal-overlay"></div>
+
+    <header class="header">
+        <a href="index.html" class="logo">WALZ STORE</a>
+        <nav class="nav">
+            <a href="index.html#games-section">Top Up Game</a>
+            <a href="index.html#promo-section">Promo</a>
+            <a href="index.html#contact-section">Kontak</a>
+        </nav>
+        <button class="nav-toggle" aria-label="Toggle navigation">&#9776;</button>
     </header>
 
-    <main class="main-content">
-        <div class="container">
-            <section class="promo-section">
-                <div class="slider-container">
-                    <div id="promo-slider" class="slider-wrapper">
+    <main class="game-page-container">
+        <section class="game-info">
+            <div class="game-header">
+                <img id="game-banner" class="game-banner" src="" alt="Game Banner">
+            </div>
+        </section>
+
+        <section class="input-section">
+            <div class="step">
+                <div class="step-header">
+                    <span class="step-number">1</span>
+                    <h2 class="step-title">Masukkan User ID</h2>
+                </div>
+                <div class="step-content">
+                    <p id="game-guide" class="guide-text"></p>
+                    <div class="input-group">
+                        <label for="user-id">User ID</label>
+                        <input type="text" id="user-id" placeholder="Masukkan User ID Anda">
+                    </div>
+                    <div id="server-group" class="input-group" style="display: none;">
+                        <label for="server-id">Server ID</label>
+                        <input type="text" id="server-id" placeholder="Masukkan Server ID Anda">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="selection-section">
+            <div class="step">
+                <div class="step-header">
+                    <span class="step-number">2</span>
+                    <h2 class="step-title">Pilih Nominal</h2>
+                </div>
+                <div class="step-content">
+                    <div id="product-grid" class="product-grid">
                         </div>
                 </div>
-                <div id="slider-dots" class="slider-dots">
-                    </div>
-            </section>
+            </div>
+        </section>
 
-            <section class="content-box">
-                <h2 class="section-title">Pilih Game Favoritmu</h2>
-                <div id="games-grid" class="game-grid">
+        <section class="selection-section">
+            <div class="step">
+                <div class="step-header">
+                    <span class="step-number">3</span>
+                    <h2 class="step-title">Pilih Metode Pembayaran</h2>
+                </div>
+                <div class="step-content">
+                    <div id="payment-grid" class="payment-grid">
+                        </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="summary-section" class="summary-section">
+            <div class="step">
+                <div class="step-header">
+                    <span class="step-number">4</span>
+                    <h2 class="step-title">Konfirmasi Pesanan</h2>
+                </div>
+                <div class="step-content">
+                    <div class="voucher-input-group">
+                        <input type="text" id="voucher-input" placeholder="Masukkan kode voucher">
+                        <button id="voucher-btn">Gunakan</button>
                     </div>
-            </section>
-        </div>
+                    <div class="voucher-help">
+                        <span id="voucher-status"></span>
+                        <button id="voucher-list-btn" class="link-btn">Lihat daftar voucher</button>
+                    </div>
+                    <div id="summary-box" class="summary-box">
+                        <p class="summary-placeholder">Pilih nominal & pembayaran untuk melihat ringkasan.</p>
+                    </div>
+                    <button id="checkout-btn" class="btn btn-primary">Beli Sekarang</button>
+                </div>
+            </div>
+        </section>
     </main>
 
-    <footer class="footer">
-        <div class="container footer-content">
-            <div class="footer-logo">
-                <span class="logo-text">WALZ</span>
-                <span class="logo-accent">SHOP</span>
-            </div>
-            <p class="footer-desc">
-                Walz Shop adalah platform top up game terpercaya. Kami menyediakan layanan top up termurah dengan proses yang cepat dan aman. Dukungan pelanggan 24/7.
-            </p>
-            <div class="footer-social">
-                <a href="https://wa.me/6282298902274" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp fa-lg"></i></a>
-            </div>
-            <p class="footer-copyright">&copy; 2024 Walz Shop. All rights reserved.</p>
-        </div>
+    <footer>
+        <p>&copy; 2024 Walz Store. All rights reserved.</p>
     </footer>
+    
+    <div id="checkout-modal" class="modal-content"></div>
+    <div id="voucher-list-modal" class="modal-content"></div>
 
     <script src="script.js"></script>
 </body>
