--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Store - Top Up Game Murah & Terpercaya</title>
+    <title>Walzshop - Top Up Game Murah & Terpercaya</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,7 @@
     <div id="modal-overlay"></div>
 
     <header class="header">
-        <a href="index.html" class="logo">WALZ STORE</a>
+        <a href="index.html" class="logo">WALZSHOP</a>
         <nav class="nav">
             <a href="#games-section">Top Up Game</a>
             <a href="#promo-section">Promo</a>
@@ -31,7 +31,7 @@
         </section>
 
         <section id="promo-section" class="promo-section">
-            <h2>🔥 Promo Terbaru</h2>
+            <h2 class="section-title">🔥 Promo Terbaru</h2>
             <div class="slider-container">
                 <div id="promo-slider" class="promo-slider"></div>
             </div>
@@ -39,13 +39,13 @@
         </section>
 
         <section id="games-section" class="games-section">
-            <h2>Pilih Game Anda</h2>
+            <h2 class="section-title">Pilih Game Anda</h2>
             <div id="games-grid" class="games-grid">
                 </div>
         </section>
 
         <section id="contact-section" class="contact-section">
-            <h2>Hubungi Kami</h2>
+            <h2 class="section-title">Hubungi Kami</h2>
             <p>Jika Anda memiliki pertanyaan atau butuh bantuan, hubungi kami melalui kontak di bawah ini.</p>
             <div class="contact-methods">
                 <a href="https://wa.me/6282298902274" target="_blank" class="contact-card">
@@ -60,11 +60,10 @@
                 </a>
             </div>
         </section>
-
     </main>
 
     <footer>
-        <p>&copy; 2024 Walz Store. All rights reserved.</p>
+        <p>&copy; 2024 Walzshop. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
