--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walzshop - Top Up Game Murah & Terpercaya</title>
+    <title>WALZSHOP | Top Up Games Murah & Terpercaya</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -22,11 +22,9 @@
     </header>
 
     <main>
-        <section id="hero-section" class="hero-section">
-            <div class="hero-content">
-                <h1>Top Up Games Murah & Terpercaya</h1>
-                <p>Proses Cepat, 100% Aman, Langsung Masuk!</p>
-                <a href="#games-section" class="btn btn-primary">Top Up Sekarang</a>
+        <section id="banner-section" class="banner-section">
+            <div class="banner-content">
+                <h1>~Tampilan baru Logo baru style baru,ui baru dan tombol rapih~</h1>
             </div>
         </section>
 
@@ -61,6 +59,10 @@
             </div>
         </section>
     </main>
+
+    <a href="https://wa.me/6282298902274" class="whatsapp-float" target="_blank" title="Hubungi kami di WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
 
     <footer>
         <p>&copy; 2024 Walzshop. All rights reserved.</p>
