--- a/game.html
+++ b/game.html
@@ -103,6 +103,10 @@
         </section>
     </main>
 
+    <a href="https://wa.me/6282298902274" class="whatsapp-float" target="_blank" title="Hubungi kami di WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
     <footer>
         <p>&copy; 2024 Walzshop. All rights reserved.</p>
     </footer>
