--- a/index.html
+++ b/index.html
@@ -3,69 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WALZSHOP | Top Up Games Murah & Terpercaya</title>
+    <title>Walz Shop - Top Up Termurah & Terlengkap</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body data-page="index">
 
-    <div id="modal-overlay"></div>
-
     <header class="header">
-        <a href="index.html" class="logo">WALZSHOP</a>
+        <a href="index.html" class="logo">WALZ SHOP</a>
         <nav class="nav">
-            <a href="#games-section">Top Up Game</a>
-            <a href="#promo-section">Promo</a>
-            <a href="#contact-section">Kontak</a>
+            <a href="index.html">Beranda</a>
+            <a href="#">Tentang Kami</a>
+            <a href="#">Kontak</a>
         </nav>
-        <button class="nav-toggle" aria-label="Toggle navigation">&#9776;</button>
+        <button class="nav-toggle">
+            <i class="fas fa-bars"></i>
+        </button>
     </header>
 
-    <main>
-        <section id="banner-section" class="banner-section">
-            <div class="banner-content">
-                <h1>~Tampilan baru Logo baru style baru,ui baru dan tombol rapih~</h1>
-            </div>
-        </section>
+    <main class="container">
+        <div class="header-content">
+            <h1 class="main-slogan">Top Up Game Termurah dan Terpercaya</h1>
+            <p class="sub-slogan">Cepat, Aman, dan Instan.</p>
+        </div>
 
-        <section id="promo-section" class="promo-section">
-            <h2 class="section-title">🔥 Promo Terbaru</h2>
+        <section class="promo-section">
             <div class="slider-container">
-                <div id="promo-slider" class="promo-slider"></div>
+                <div id="promo-slider" class="slider-items"></div>
             </div>
             <div id="slider-dots" class="slider-dots"></div>
         </section>
 
-        <section id="games-section" class="games-section">
-            <h2 class="section-title">Pilih Game Anda</h2>
+        <section class="games-section">
+            <h2 class="section-title">Pilih Game Favoritmu</h2>
             <div id="games-grid" class="games-grid">
                 </div>
         </section>
-
-        <section id="contact-section" class="contact-section">
-            <h2 class="section-title">Hubungi Kami</h2>
-            <p>Jika Anda memiliki pertanyaan atau butuh bantuan, hubungi kami melalui kontak di bawah ini.</p>
-            <div class="contact-methods">
-                <a href="https://wa.me/6282298902274" target="_blank" class="contact-card">
-                    <i class="fab fa-whatsapp"></i>
-                    <h3>WhatsApp</h3>
-                    <p>62822-9890-2274</p>
-                </a>
-                <a href="mailto:walzlonely@gmail.com" class="contact-card">
-                    <i class="far fa-envelope"></i>
-                    <h3>Email</h3>
-                    <p>walzlonely@gmail.com</p>
-                </a>
-            </div>
-        </section>
     </main>
 
-    <a href="https://wa.me/6282298902274" class="whatsapp-float" target="_blank" title="Hubungi kami di WhatsApp">
-        <i class="fab fa-whatsapp"></i>
-    </a>
-
-    <footer>
-        <p>&copy; 2024 Walzshop. All rights reserved.</p>
+    <footer class="footer">
+        <p>&copy; 2025 Walz Shop. Semua Hak Dilindungi.</p>
     </footer>
 
     <script src="script.js"></script>
